--- a/index.html
+++ b/index.html
@@ -17,19 +17,27 @@
 
     img {
       padding: 0;
-      display: grid;
+      display: none;
       margin: 0 auto;
-      max-height: 100%;
+      height: 100%;
       max-width: 100%;
     }
+
+    video {
+      padding: 0;
+      display: none;
+      margin: 0 auto;
+      height: 100vh;
+      min-width: 130vh;
+    }
+
 
   </style>
 </head>
 <body>
 
   <img>
-
-  <br>
+  <video autoplay muted></video>
 
   <script type="text/javascript" src="./jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="./index.js"></script>
