--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
       padding: 0;
       display: none;
       margin: 0 auto;
-      height: 100%;
       max-width: 100%;
+      max-height: 100%;
+      height: auto;
+      width: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
     }
 
     video {
