--- a/index.html
+++ b/index.html
@@ -38,12 +38,32 @@
       min-width: 130vh;
     }
 
+    #loader {
+      border: 16px solid #f3f3f3;
+      border-top: 16px solid #3498db;
+      border-radius: 50%;
+      width: 120px;
+      height: 120px;
+      animation: spin 2s linear infinite;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
   </style>
 </head>
 <body>
 
+  <div id="loader"></div>
   <img>
-  <video autoplay muted></video>
+  <video muted></video>
 
   <script type="text/javascript" src="./jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="./index.js"></script>
