--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     }
 
     #loader {
+      display: block;
       border: 16px solid #f3f3f3;
       border-top: 16px solid #3498db;
       border-radius: 50%;
